fix: :bug: center status text on tablet viewport

--- a/Views/User/History.cshtml.css
+++ b/Views/User/History.cshtml.css
@@ -215,6 +215,7 @@
 #status-text {
     font-size: 1rem;
     font-weight: bold;
+    text-align: center;
 }
 
 #registration-time {
